// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiText is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 css-p6rn6t-euiText-m"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;

exports[`EuiText props color & align 1`] = `
<div
  aria-label="aria-label"
  class="css-1pm8py9-euiText-m-euiTextColor-danger-euiTextAlign-center"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;

exports[`EuiText props grow false 1`] = `
<div
  aria-label="aria-label"
  class="euiText testClass1 testClass2 css-b6i93m-euiText-constrainedWidth-m"
  data-test-subj="test subject string"
>
  <p>
    Content
  </p>
</div>
`;
